fixed a out of bound map array access

--- a/medp285/finalproject/maze.css
+++ b/medp285/finalproject/maze.css
@@ -16,7 +16,7 @@
 #chatLogTitle {
     position: relative;
     margin: 0;
-    height:; 10%;
+    height: 10%;
 }
 
 #chatLog {
